[tool.poetry]
name = "chess-board"
version = "0.1.0"
description = ""
authors = ["yousef-alramli <ysabdys1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.3"
jupyterlab = "^3.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
